--- a/index.html
+++ b/index.html
@@ -1,63 +1,70 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <h1>Bowling Scorecard</h1>
-  </head>
+  <link rel="stylesheet" href="color.css">
+  <h1 class="title">Bowling Score Card</h1>
   <body>
-    <p>
-      <button id="new-game">new game</button>
-      <table style="width:90%">
-        <tr>
-          <th>Frame 1</th>
-          <th>Frame 2</th>
-          <th>Frame 3</th>
-          <th>Frame 4</th>
-          <th>Frame 5</th>
-          <th>Frame 6</th>
-          <th>Frame 7</th>
-          <th>Frame 8</th>
-          <th>Frame 9</th>
-          <th>Frame 10</th>
-        </tr>
-        <tr>
-          <th>roll 1: (number)</th>
-          <th>roll 1: (number)</th>
-          <th>roll 1: (number)</th>
-          <th>roll 1: (number)</th>
-          <th>roll 1: (number)</th>
-          <th>roll 1: (number)</th>
-          <th>roll 1: (number)</th>
-          <th>roll 1: (number)</th>
-          <th>roll 1: (number)</th>
-          <th>roll 1: (number)</th>
-        </tr>
-        <tr>
-          <th>roll 2: (number)</th>
-          <th>roll 2: (number)</th>
-          <th>roll 2: (number)</th>
-          <th>roll 2: (number)</th>
-          <th>roll 2: (number)</th>
-          <th>roll 2: (number)</th>
-          <th>roll 2: (number)</th>
-          <th>roll 2: (number)</th>
-          <th>roll 2: (number)</th>
-          <th>roll 2: (number)</th>
-        </tr>
-        <tr>
-          <th>score: (score)</th>
-          <th>score: (score)</th>
-          <th>score: (score)</th>
-          <th>score: (score)</th>
-          <th>score: (score)</th>
-          <th>score: (score)</th>
-          <th>score: (score)</th>
-          <th>score: (score)</th>
-          <th>score: (score)</th>
-          <th>score: (score)</th>
-        </tr>
-      </table>
-    </p>
-    <script src="src/Bowling.js"></script>
-    <script src="interface.js"></script>
+    <script src="Public/Javascripts/src/jquery-3.3.1.js"></script>
+    <!-- <h1 class="title">Bowling Score Card</h1> -->
+  <div id="buttons" class="buttons">
+    Pins Hit:
+    <button type="button" onclick="pinHit(0)"  class="btn btn-primary">Gutter</button>
+    <button type="button" onclick="pinHit(1)"  class="btn btn-primary">1</button>
+    <button type="button" onclick="pinHit(2)"  class="btn btn-primary">2</button>
+    <button type="button" onclick="pinHit(3)"  class="btn btn-primary">3</button>
+    <button type="button" onclick="pinHit(4)"  class="btn btn-primary">4</button>
+    <button type="button" onclick="pinHit(5)"  class="btn btn-primary">5</button>
+    <button type="button" onclick="pinHit(6)"  class="btn btn-primary">6</button>
+    <button type="button" onclick="pinHit(7)"  class="btn btn-primary">7</button>
+    <button type="button" onclick="pinHit(8)"  class="btn btn-primary">8</button>
+    <button type="button" onclick="pinHit(9)"  class="btn btn-primary">9</button>
+    <button type="button" onclick="pinHit(10)"  class="btn btn-primary">10</button>
+  </div>
+  <div id='scorecard'>
+  <table id='scorecardTable' class='scorecard' cellpadding='1' cellspacing='0'>
+    <tr>
+      <th colspan='6'>Frame 1</th>
+      <th colspan='6'>Frame 2</th>
+      <th colspan='6'>Frame 3</th>
+      <th colspan='6'>Frame 4</th>
+      <th colspan='6'>Frame 5</th>
+      <th colspan='6'>Frame 6</th>
+      <th colspan='6'>Frame 7</th>
+      <th colspan='6'>Frame 8</th>
+      <th colspan='6'>Frame 9</th>
+      <th colspan='6'>Frame 10</th>
+    </tr>
+    <tr>
+      <td colspan='3'></td><td id="frame1"colspan='3'></td>
+      <td colspan='3'></td><td id="frame2" colspan='3'></td>
+      <td colspan='3'></td><td id="frame3" colspan='3'></td>
+      <td colspan='3'></td><td id="frame4" colspan='3'></td>
+      <td colspan='3'></td><td id="frame5" colspan='3'></td>
+      <td colspan='3'></td><td id="frame6" colspan='3'></td>
+      <td colspan='3'></td><td id="frame7" colspan='3'></td>
+      <td colspan='3'></td><td id="frame8" colspan='3'></td>
+      <td colspan='3'></td><td id="frame9" colspan='3'></td>
+      <td colspan='3'></td><td id="frame10" colspan='3'></td>
+    </tr>
+    <tr>
+      <td colspan='6'id="marker0"></td>
+      <td colspan='6'id="marker1"></td>
+      <td colspan='6'id="marker2"></td>
+      <td colspan='6'id="marker3"></td>
+      <td colspan='6'id="marker4"></td>
+      <td colspan='6'id="marker5"></td>
+      <td colspan='6'id="marker6"></td>
+      <td colspan='6'id="marker7"></td>
+      <td colspan='6'id="marker8"></td>
+      <td colspan='6'id="marker9"></td>
+    </tr>
+  </table>
+</div>
+<h1 id="comments" class="notice"></h1>
+<h1 id="gameover" class="notice"></h1>
+<h1 id="yourscore" class="final-score"></h1>
+<div id="playagain"></div>
+
+     <script src="Public/Javascripts/src/Bowling.js"></script>
+     <script src="Public/Javascripts/interface.js"></script>
   </body>
 </html>
